# pidgey

./: README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/pidgey/: __init__.py  agama_backend.py  base.py  gala_backend.py  galpy_backend.py  utils.py
src/pidgey/coordinates/: __init__.py  base.py  dim2.py  dim3.py
tests/: gala_env.yml  galpy_env.yml  test_agama.py  test_gala.py  test_galpy.py
